--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -3,8 +3,8 @@ Certain colors are used for different and multiply types of elements.
 For greater control over colors visit each components .scss file. */
 
 // button colors
-$buttonColor: #55198b;
-$buttonHover: #8c43ce;
+$buttonColor: #000000;
+$buttonHover: #000000;
 $topButtonHover: #000;
 
 // text colors light theme
@@ -28,7 +28,7 @@ $githubRepoCardColor: rgb(88, 96, 105);
 $githubRepoCardRepoCardStatsColor: rgb(106, 115, 125);
 $githubRepoCardRepoNameColor: rgb(36, 41, 46);
 $githubProfileCardLocationTS: #ffebcd;
-$githubProfileCardBorder: #6c63ff;
+$githubProfileCardBorder: #ffffff;
 
 // light background colors
 $lightBackground1: #fff;
